sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:10: error: not found: value -
      case (true,getNombreValeurs()-1) => return
                                   ^AlgGnomeSort:10: error: not found: value getNombreValeurs
      case (true,getNombreValeurs()-1) => return
                 ^